--- a/index.html
+++ b/index.html
@@ -84,5 +84,14 @@
         let map = null;
     </script>
     <script src="script.js"></script>
+
+
+
+    <!-- In index.html -->
+<script>
+  const API_BASE_URL = "https://salzburg-backend.onrender.com";
+</script>
+    
 </body>
+
 </html>
