--- a/index.html
+++ b/index.html
@@ -76,13 +76,20 @@
     </div>
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
-    <script>
-        // Global configuration
-        const MAPBOX_TOKEN = "{{ mapbox_token }}";
-        const API_BASE_URL = window.location.origin;
-        let selectedAttractions = [];
-        let map = null;
-    </script>
+
+
+<script>
+  // Global configuration
+  const MAPBOX_TOKEN = "pk.eyJ1IjoiamFraXJob3NzYWluNTIiLCJhIjoiY21lYng0dXQzMTRzYjJqcXVuaGdlMjZyZyJ9.p9X8xLZPuYCnY1sjPDMT8Q";
+  const API_BASE_URL = "https://salzburg-backend.onrender.com";
+  let selectedAttractions = [];
+  let map = null;
+</script>
+
+
+
+    
     <script src="script.js"></script>
 </body>
 </html>
+
